[package]
name = "tiledir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
itertools = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
rayon = "1"
regex = "1"
tempfile-fast = "0.3.4"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg", "pnm", "bmp", "avif-encoder"]
