[package]
name = "tiledir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
itertools = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
rayon = "1"
rand = "0.8"
regex = "1"
tempfile-fast = "0.3.4"

[dependencies.image]
# 0.24.5 and below's avif are broken on Safari
version = "0.24.6"
default-features = false
features = ["png", "jpeg", "pnm", "bmp", "avif-encoder"]

[profile.release]
lto = true
